force-app/main/default/objects/Commercial_Slot__c/Commercial_Slot__c.object-meta.xml
<CustomObject>
    <label>Commercial Slot</label>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Commercial Slot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>