force-app/main/default/objects/Commercial_Slot__c/fields/Commercial_fld__c.field-meta.xml
<CustomField>
    <fullName>Commercial_fld__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The related Commercial. Lookup (Commercial__c) field.</description>
    <label>Commercial</label>
    <referenceTo>Commercial__c</referenceTo>
    <relationshipLabel>Commercial Slots</relationshipLabel>
    <relationshipName>Commercial_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>