force-app/main/default/objects/Commercial_Slot__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <formula>Timeslot_fld__r.Timeslot_Date_Time__c</formula>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>