force-app/main/default/objects/Commercial_Slot__c/fields/Number_of_Broadcasts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Broadcasts__c</fullName>
    <description>The number of times the related Commercial will be broadcast during the related Timeslot.</description>
    <label>Number of Broadcasts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>