force-app/main/default/objects/Commercial_Slot__c/fields/Timeslot_fld__c.field-meta.xml
<CustomField>
    <fullName>Timeslot_fld__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Timeslot</label>
    <referenceTo>Timeslot__c</referenceTo>
    <relationshipLabel>Commercial Slots</relationshipLabel>
    <relationshipName>Commercial_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>