force-app/main/default/objects/Commercial_Slot__c/fields/Total_Broadcast_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Total_Broadcast_Time_Text__c</fullName>
    <formula>Commercial_fld__r.Total_Broadcast_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Broadcast Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>